--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "assets/scss/table";
 @import "assets/scss/button";
+@import "toastify-js/src/toastify.css";
 
 .section-title {
     margin: 0;
