--- a/src/app/components/expense-form/expense-form.component.html
+++ b/src/app/components/expense-form/expense-form.component.html
@@ -2,8 +2,8 @@
     <h2 class="section-title mb-4">{{ getFormTitle() }}</h2>
     <!-- <h2 class="section-title mb-4">Nuevo Gasto</h2> -->
     <div class="d-flex gap-2 mb-3">
-      <a class="btn btn-outline-secondary" routerLink="/gastos">Cancelar</a>
-      <button type="button" class="btn btn-primary" (click)="saveExpense()" [disabled]="this.expenseForm.invalid">Guardar gasto</button>
+      <!-- <a class="btn btn-outline-secondary" routerLink="/gastos">Cancelar</a>
+      <button type="button" class="btn btn-primary" (click)="saveExpense()" [disabled]="this.expenseForm.invalid">Guardar gasto</button> -->
     </div>
   </div>
   
@@ -40,5 +40,8 @@
         <span *ngSwitchCase="'required'">El campo fecha de gasto es requerido</span>
       </div>
     </div>
+   <div class="d-flex gap-2 mb-3">
+    <a class="btn btn-outline-secondary" routerLink="/gastos">Cancelar</a>
     <button type="submit" class="btn btn-primary" [disabled]="this.expenseForm.invalid">Guardar gasto</button>
+  </div>
   </form>
