--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,9 +1,9 @@
 /*================ My Variables ================*/
-$my-primary-color        : #3498DB;
+$my-primary-color        : #29de18;
 $my-danger-color         : #FB2E2E;
 $my-dark-color           : #141824;
 $my-secondary-light-color: #EFF2F6;
-$my-secondary-color      : #858A9B;
+$my-secondary-color      : #eece01;
 $my-white-color          : #FFFFFF;
 $my-border-color         : #D9D9D9;
 $my-column-title-color   : #31374A;
